--- a/package.json
+++ b/package.json
@@ -21,4 +21,19 @@
 		    "lodash": "^4.17.4",
 		    "moment": "^2.18.1"
 	 },
+	 "devDependencies": {
+    			"chai": "^4.0.2",
+    			"chai-as-promised": "^7.1.0",
+    			"eslint": "^3.3.1",
+    			"eslint-config-airbnb": "^10.0.1",
+    			"eslint-config-airbnb-base": "^5.0.2",
+    			"eslint-plugin-import": "^1.16.0",
+    			"eslint-plugin-jsx-a11y": "^2.1.0",
+    			"eslint-plugin-react": "^6.1.1",
+    			"fs-extra": "^4.0.1",
+    			"mocha": "^3.4.2",
+    			"nock": "^9.2.3",
+    			"request": "^2.85.0",
+    			"sinon": "^3.3.0"
+  }
 }
