--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "serverless-fission",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "This plugins enables support for kubernetes",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint , --cache"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/infracloudio/serverless-fission.git"
   },
   "author": "info@infracloud.io",
-  "lincense": "Apache-2.0",
+  "license": "Apache-2.0",
   "dependencies": {
     "bluebird": "^3.5.0",
     "chalk": "^2.0.1",
@@ -27,10 +27,16 @@
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-config-airbnb-base": "^5.0.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-async": "^0.1.1",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^6.1.1",
+    "eslint-plugin-standard": "^3.1.0",
     "fs-extra": "^4.0.1",
+    "jslint": "^0.12.0",
     "mocha": "^3.4.2",
     "nock": "^9.2.3",
     "request": "^2.85.0",
