Please enter the commit message for your changes. Lines starting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,8 @@
   "parserOptions": {
     "ecmaVersion": 2017
   },
+  "rules": {
+    "no-console": "off"
+  },
   "extends": "eslint:recommended"
 }
