--- a/examples/Nodejs/package.json
+++ b/examples/Nodejs/package.json
@@ -1,9 +1,9 @@
-
 {
   "name": "hello",
   "version": "1.0.0",
   "description": "Example function for serverless kubeless",
   "dependencies": {
+    "kubernetes-client": "^5.3.1",
     "node-run-cmd": "^1.0.1",
     "serverless-fission": "^0.0.1"
   },
