--- a/examples/Go/package.json
+++ b/examples/Go/package.json
@@ -2,7 +2,7 @@
 {
   "name": "hello",
   "version": "1.0.0",
-  "description": "Example function for serverless kubeless",
+  "description": "Example function for serverless fission",
   "dependencies": {
     "node-run-cmd": "^1.0.1",
     "serverless-fission": "^0.0.1"
