--- a/package.json
+++ b/package.json
@@ -1,51 +1,47 @@
-/*
- Copyright 2018 Infracloud Technologies.
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
-     http://www.apache.org/licenses/LICENSE-2.0
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
-*/
 {
-	"name": "serverless-fission",
-	"version": "0.0.1",
-	"description": "This plugins enables support for kubernetes-fission",
-	"main": "index.js",
-	"scripts": {
-		"lint": "eslint , --cache"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/infracloudio/serverless-fission.git"
-	},
-	"author": "info@infracloud.io",
-	"lincense": "Apache-2.0",
-	"dependencies": {
-		    "bluebird": "^3.5.0",
-		    "chalk": "^2.0.1",
-		    "js-yaml": "^3.9.0",
-		    "jszip": "^3.1.3",
-		    "kubernetes-client": "^3.12.0",
-		    "lodash": "^4.17.4",
-		    "moment": "^2.18.1"
-	 },
-	 "devDependencies": {
-    			"chai": "^4.0.2",
-    			"chai-as-promised": "^7.1.0",
-    			"eslint": "^3.3.1",
-    			"eslint-config-airbnb": "^10.0.1",
-    			"eslint-config-airbnb-base": "^5.0.2",
-    			"eslint-plugin-import": "^1.16.0",
-    			"eslint-plugin-jsx-a11y": "^2.1.0",
-    			"eslint-plugin-react": "^6.1.1",
-    			"fs-extra": "^4.0.1",
-    			"mocha": "^3.4.2",
-    			"nock": "^9.2.3",
-    			"request": "^2.85.0",
-    			"sinon": "^3.3.0"
+  "name": "serverless-fission",
+  "version": "0.0.1",
+  "description": "This plugins enables support for kubernetes",
+  "main": "index.js",
+  "scripts": {
+    "lint": "eslint ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/infracloudio/serverless-fission.git"
+  },
+  "author": "info@infracloud.io",
+  "license": "Apache-2.0",
+  "dependencies": {
+    "7": "0.0.1",
+    "bluebird": "^3.5.0",
+    "chalk": "^2.0.1",
+    "install": "^0.12.1",
+    "js-yaml": "^3.9.0",
+    "jszip": "^3.1.3",
+    "lint": "^1.1.2",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-config-airbnb-base": "^5.0.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-async": "^0.1.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^6.1.1",
+    "eslint-plugin-standard": "^3.1.0",
+    "fs-extra": "^4.0.1",
+    "jslint": "^0.12.0",
+    "mocha": "^3.4.2",
+    "nock": "^9.2.3",
+    "request": "^2.85.0",
+    "sinon": "^3.3.0"
   }
 }
